<resources>
    <string name="app_name">InventoryManagementSystem</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="new_user_click_here_to_sign_up">New user ? Click here to sign up</string>
    <string name="signup">Signup</string>
    <string name="already_registered_click_here_to_sign_in">Already registered ? Click here to sign in</string>
    <color name="white">#33FFD2</color>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_item">Item</string>
    <string name="item">Item</string>
    <string name="Supplier">Supplier</string>
    <string name="More">More</string>
    <string name="addbutton">addButton</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="item_name">Item Name</string>
    <string name="itemim">itemim</string>
    <string name="location">location</string>
    <string name="category">category</string>
    <string name="purchase_date">purchase date</string>
    <string name="supplier_name">supplier name</string>
    <string name="warranty_end_date">warranty end date</string>
    <string name="notes">notes</string>
    <string name="save">save</string>
    <string name="generate_report">Generate Report</string>
    <string name="manage_users">Manage Users</string>
    <string name="logout">Logout</string>
    <string name="listViewSuppliers">listviewsuppliers</string>
    <string name="supplier_namee">Supplier Name</string>
    <string name="del">delete</string>
    <string name="delete">delete</string>
    <string name="listViewItems">listViewItems</string>
    <string name="supplierType">Supplier Type</string>
    <string name="update">update</string>
    <string name="upSupplierImage">updatesupplierim</string>
    <string name="edtsupplier_name">Supplier Name</string>
    <string name="edtsupplier_email">Supplier Email</string>
    <string name="edtsupplier_contact">Supplier Contact</string>
    <string name="edtsupplier_address">Supplier Address</string>
    <string name="edtsupplier_comments">Supplier Comments</string>
    <string name="items">Items</string>
    <string name="suppliers_list">Suppliers list</string>
    <string name="items_list">items list</string>
    <string name="generate">GENERATE</string>
    <string name="add_new_user">ADD NEW USER</string>
    <string name="del_account">DELETE THIS ACCOUNT</string>
    <string name="code">code</string>
    <string name="generate_labels">Generate Labels</string>
    <string name="scansearchitem">scansearchitem</string>
    <string name="add_lending_details">Add Lending Details</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="lent_to">Lent to</string>
    <string name="lend_date">lend date</string>
    <string name="return_date">return date</string>
    <string name="view_lent_items">View Lent Items</string>
    <string name="view_warranty_ending_items">View warranty Ending Items</string>
    <string name="person_name">Person Name</string>
    <string name="lent_date">Lent Date</string>
    <string name="return_datee">Return Date</string>
    <string name="commentslend">Comments</string>
</resources>
