<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".EditItemActivity">

    <ImageView
        android:id="@+id/edtitemIm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
        android:contentDescription="@string/itemim" />

    <EditText
        android:id="@+id/edtitemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/supplier_namee"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtitemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtitemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o"/>


    <EditText
        android:id="@+id/edtitemLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtitemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtitemPurchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/purchase_date"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtitemSupplierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/supplier_name"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/edtitemWarrantyEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtitemComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        tools:targetApi="o" />


    <Button
        android:id="@+id/edtsaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/edtDeleteItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/lendItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_lending_details" />


</LinearLayout>