<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".AddItemActivity">

    <ImageView
        android:id="@+id/itemIm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
        android:contentDescription="@string/itemim" />


    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/item_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/itemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o"/>


    <EditText
        android:id="@+id/itemLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/itemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/itemPurchaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/purchase_date"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/itemSupplierName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/supplier_name"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/itemWarrantyEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/warranty_end_date"
        android:importantForAutofill="no"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/itemComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        tools:targetApi="o" />


    <Button
        android:id="@+id/saveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />


</LinearLayout>

